src/tests/fail/lang_entry_point2.ml
open SCaml
    
let [@entry] init () _ = [], ()

let [@entry] go () _ = [], ()

let inc x = x + Int 1
            

                               
